[package]
name = "advent_2015"
version = "0.1.0"
authors = ["Patrick Barrett <patrickbarrett@exosite.com>"]

[dependencies]
regex = "0.1"
rust-crypto = "^0.2"
time = "0.1.34"
pcre = "0.2.1"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"